# lakeleto

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.release  NOTICE  README.md  RELEASING.md  SECURITY.md
.github/workflows/: release.yml
Formula/: lakeleto.rb
docs/: CONFIG.md  DEPLOY.md  DOCKERHUB.md  GUIDE.md  OPERATIONS.md
examples/: README.md  mini.tsv  people.csv
examples/sample-data/: orders.csv  orders.parquet  sensors.tsv
frontend/: .gitattributes  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  TableView.tsx  api.ts  components.tsx  extras.tsx  main.tsx  styles.css  workspace.tsx
src/: api.rs  cli.rs  error.rs  iceberg.rs  lib.rs  main.rs  objstore.rs  render.rs  source.rs  workspace.rs  workspace_remote.rs
src/engine/: database.rs  delta.rs  local.rs  mod.rs  remote.rs  sql.rs
tests/: api.rs  iceberg.rs  local_engine.rs  oss_boundary.rs  remote_store.rs
